--- a/view/locale/ru/template/default/index.ejs
+++ b/view/locale/ru/template/default/index.ejs
@@ -3,22 +3,16 @@
 <% block('title', 'Создание приложения') %>
 
 <div class="folder panel-default panel">
-    <div class="panel-heading">
-        <h4 class="panel-title">Краткий обзор</h4>
-    </div>
     <div class="panel-body">
         <p>
-            В Студии создаются метаданные, описывающие структуру приложения.
+            В модуле "Студия" создаются метаданные, то есть сущности приложения и связи между ними.
             <br>
-            Например, приложение <b>Блог</b> состоит
-            из классов <b>Статья</b>, <b>Категория</b>, <b>Комментарий</b> и других.
+            Например, приложение "Блог" состоит
+            из классов "Статья", "Категория", "Комментарий" и других.
         </p>
         <p>
-            Созданные в Студии данные находятся в отдельном хранилище.
+            Созданные сущности находятся в отдельном хранилище.
             Чтобы данные попали в приложение необходимо экспортировать их в директорию <b>metadata/app</b>.
-            <br>
-            Экспорт данных можно сделать в другое место,
-            но приложение загружается только из директории <b>metadata/app</b>.
         </p>
     </div>
 </div>
@@ -31,14 +25,14 @@
         <p>
             Атрибут описывает отдельный элемент класса.
             <br>
-            Например, класс <b>Статья</b> состоит из атрибутов
-            <b>Заголовок</b>, <b>Содержание</b>, <b>Дата</b> и других.
+            Например, класс "Статья" состоит из атрибутов
+            "Заголовок", "Содержание", "Дта" и других.
         </p>
         <p>
             Каждый атрибут имеет определенный тип, который зависит от хранимых в нем данных.
             <br>
-            Например, атрибут <b>Заголовок</b> имеет тип <b>Строка</b>,
-            атрибут <b>Создано</b> имеет тип <b>Дата</b>.
+            Например, атрибут "Заголовок" имеет тип "Строка",
+            атрибут "Содержание" имеет тип "Текст".
         </p>
     </div>
 </div>
@@ -49,25 +43,24 @@
     </div>
     <div class="panel-body">
         <p>
-            Типы атрибутов <b>Ссылочный</b> и <b>Обратная ссылка</b> определяют связь между классами.
-            Параметры связи устанавливаются на вкладке <b>Отношение</b>.
+            Типы атрибутов "Ссылочный" и "Обратная ссылка" определяют связь между классами.
+            Параметры связи устанавливаются на вкладке "Отношение".
             <br>
-            Например, класс <b>Статья</b> имеет связь с классом <b>Категория</b>,
-            потому что каждая статья может быть размещена в любой категории.
+            Тип "Ссылочный" хранит ссылку непосредственно в объекте класса.
+            Например, комментарий имеет ссылку на статью, к которой он относится.
         </p>
         <p>
-            Тип <b>Ссылочный</b> хранит данные связи непосредственно в объекте класса.
-            <br>
-            Тип <b>Обратная ссылка</b> извлекает данные из объекта связанного класса.
+            Тип "Обратная ссылка" наоборот, извлекает данные связи из объекта ссылочного класса.
             <br>
             Например, комментарии для статьи извлекаются по обратной ссылке,
             потому что каждый комментарий хранит в себе идентификатор статьи.
+            В самой статье никаких данных о комментариях не хранится.
         </p>
         <p>
             Связь может быть множественной или одиночной.
             <br>
-            Комментарии в классе <b>Статья</b> - это примеры множественной связи.
-            Статья в классе <b>Комментарий</b> - это пример одиночной связи.
+            Ссылка на статью в комментарии - это пример одиночной связи.
+            Ссылка на комментарии в статье - это пример множественной связи.
         </p>
     </div>
 </div>
@@ -80,14 +73,16 @@
         <p>
             Представление переопределяет параметры класса для конкретных случаев использования.
             <br>
-            Например при отображении объектов класса в списке могут быть показаны только избранные атрибуты.
+            Например, при отображении объектов в списке могут быть показаны только избранные атрибуты.
         </p>
         <p>
-            Кодовое имя <b>list</b> используется для представления объектов в списке.
+            Кодовое имя "list" используется для представления объектов в списке.
             <br>
-            Кодовое имя <b>create</b> используется для представления объекта при создании.
+            Кодовое имя "create" используется для представления объекта при создании.
             <br>
-            Кодовое имя <b>edit</b> используется для представления объекта при редактировании.
+            Кодовое имя "edit" используется для представления объекта при редактировании.
+            <br>
+            Кодовое имя "eager" используется для представления объекта при жадной загрузке.
         </p>
     </div>
 </div>
@@ -98,7 +93,7 @@
     </div>
     <div class="panel-body">
         <p>
-            Меню в боковой панели модуля <b>Офис</b> создается из секции навигации с кодовым названием <b>main</b>.
+            Меню в боковой панели модуля "Офис" создается из секции навигации с кодовым именем "main".
         </p>
     </div>
 </div>
