--- a/view/template/class/update.ejs
+++ b/view/template/class/update.ejs
@@ -101,11 +101,7 @@ const relationTemplate = _view.get('_part/attr/relation');
                 }, {
                     name: 'label'
                 }, {
-                    name: 'view',
-                    format: {
-                        name: 'relation',
-                        url: _url('view/update')
-                    }
+                    name: 'description'
                 }, {
                     name: 'defaults',
                     format: 'boolean'
