--- a/view/template/state/_form.ejs
+++ b/view/template/state/_form.ejs
@@ -21,7 +21,7 @@ const stringTemplate = _view.get('_part/attr/string');
         template: checkboxTemplate,
         params: {
             attr: 'defaults',
-            hint: 'This state will be assigned to a new object'
+            hint: 'This state will be assigned to each created object'
         }
     }, {
         template: checkboxTemplate,
