--- a/view/locale/ru/template/default/index.ejs
+++ b/view/locale/ru/template/default/index.ejs
@@ -26,7 +26,7 @@
             Атрибут описывает отдельный элемент класса.
             <br>
             Например, класс "Статья" состоит из атрибутов
-            "Заголовок", "Содержание", "Дта" и других.
+            "Заголовок", "Содержание", "Дата создания" и других.
         </p>
         <p>
             Каждый атрибут имеет определенный тип, который зависит от хранимых в нем данных.
