--- a/view/template/_part/nav/logo.ejs
+++ b/view/template/_part/nav/logo.ejs
@@ -2,5 +2,5 @@
 
 <a href="studio" class="logo" title="Studio">
     <span class="logo-mini"><b>S</b></span>
-    <span class="logo-lg"><%- _module.app.getTitle() %>.<b>Studio</b></span>
+    <span class="logo-lg"><%- _module.app.getTitle() %>.<b data-t="">Studio</b></span>
 </a>
