--- a/view/locale/ru/template/default/index.ejs
+++ b/view/locale/ru/template/default/index.ejs
@@ -5,10 +5,9 @@
 <div class="folder panel-default panel">
     <div class="panel-body">
         <p>
-            В модуле "Студия" создаются метаданные, то есть сущности приложения и связи между ними.
+            В модуле "Студия" создаются метаданные, то есть предметные сущности приложения и связи между ними.
             <br>
-            Например, приложение "Блог" состоит
-            из классов "Статья", "Категория", "Комментарий" и других.
+            Например, приложение "Блог" состоит из классов "Статья", "Категория", "Комментарий" и других.
         </p>
         <p>
             Созданные сущности находятся в отдельном хранилище.
@@ -25,14 +24,12 @@
         <p>
             Атрибут описывает отдельный элемент класса.
             <br>
-            Например, класс "Статья" состоит из атрибутов
-            "Заголовок", "Содержание", "Дата создания" и других.
+            Например, класс "Статья" состоит из атрибутов "Заголовок", "Содержание", "Дата создания" и других.
         </p>
         <p>
             Каждый атрибут имеет определенный тип, который зависит от хранимых в нем данных.
             <br>
-            Например, атрибут "Заголовок" имеет тип "Строка",
-            атрибут "Содержание" имеет тип "Текст".
+            Например, атрибут "Заголовок" имеет тип "Строка", атрибут "Содержание" имеет тип "Текст".
         </p>
     </div>
 </div>
