--- a/view/template/default/index.ejs
+++ b/view/template/default/index.ejs
@@ -4,10 +4,9 @@
 <div class="folder panel-default panel">
     <div class="panel-body">
         <p>
-            The Studio module creates metadata describing application entities and relationships between them.
+            The Studio module creates metadata describing domain entities and relationships between them.
             <br>
-            For example, the Blog application consists
-            of the Article, Category, Comment, and others classes.
+            For example, the Blog application consists of the Article, Category, Comment, and others classes.
         </p>
         <p>
             The created entities are in a separate store.
@@ -23,14 +22,12 @@
     <div class="panel-body">
         <p>
             Attribute describes a single class element.<br>
-            For example, the Article class consists
-            of the Title, Content, Date and other attributes.
+            For example, the Article class consists of the Title, Content, Date and other attributes.
         </p>
         <p>
             Each attribute has a specific type depending on stored data.
             <br>
-            For example, the Title attribute is of type String,
-            the Content attribute is of type Text.
+            For example, the Title attribute is of type String, the Content attribute is of type Text.
         </p>
     </div>
 </div>
