--- a/view/template/class-attr/_tabSearch.ejs
+++ b/view/template/class-attr/_tabSearch.ejs
@@ -19,7 +19,8 @@
     items: [{
         template: _view.get('_part/attr/string'),
         params: {
-            attr: 'searchDepth'
+            attr: 'searchDepth',
+            extHint: 'Maximum number of nested levels of related search filter objects'
         }
     }]
 }) %>
