--- a/view/template/class-attr/_tabInheritedRelation.ejs
+++ b/view/template/class-attr/_tabInheritedRelation.ejs
@@ -134,7 +134,8 @@ const selectTemplate = _view.get('_part/attr/select');
                 select2: viewSelect2,
                 depends: refClassMaster,
                 update: viewUpdate,
-                actionBinder: refClassExists
+                actionBinder: refClassExists,
+                extHint: 'View for eager loading of related objects'
             }
         }
     }, {
