--- a/view/template/class-index/_form.ejs
+++ b/view/template/class-index/_form.ejs
@@ -14,7 +14,8 @@
 }) %>
 
 <%- include(_view.get('_part/attr/checkbox'), {
-    attr: 'background'
+    attr: 'background',
+    hint: 'Build the index without blocking other database activity'
 }) %>
 
 <%- include(_view.get('_part/attr/json'), {
