--- a/view/template/class/update.ejs
+++ b/view/template/class/update.ejs
@@ -81,9 +81,11 @@ const relationTemplate = _view.get('_part/attr/relation');
                 },{
                     name: 'name'
                 },{
-                    name: 'unique'
+                    name: 'unique',
+                    format: 'boolean'
                 },{
-                    name: 'background'
+                    name: 'background',
+                    format: 'boolean'
                 }],
                 link: null,
                 unlink: null
