--- a/view/template/state/create.ejs
+++ b/view/template/state/create.ejs
@@ -1,3 +1,4 @@
 <% block('title', 'Create state') %>
 
 <%- include(_view.getInternalTemplate('_form')) %>
+<%- include(_view.getInternalTemplate('_tabMain')) %>
