--- a/view/template/view/_tabMain.ejs
+++ b/view/template/view/_tabMain.ejs
@@ -23,13 +23,13 @@ const viewUpdate = _url('view/update');
         template: jsonTemplate,
         params: {
             attr: 'order',
-            extHint: 'Object list order: {attrName: 1}'
+            extHint: 'Object list order (e.g. {attrName: 1})'
         }
     },{
         template: jsonTemplate,
         params: {
             attr: 'grouping',
-            extHint: 'Object list grouping: {attrName: 1}'
+            extHint: 'Object list grouping (e.g. {attrName: 1})'
         }
     }]
 }) %>
