--- a/view/template/_part/behavior-param/autoIncrement.ejs
+++ b/view/template/_part/behavior-param/autoIncrement.ejs
@@ -1,15 +1,9 @@
 <!-- _part/behavior-param/autoIncrement -->
 
-<%- include(_view.get('_part/group/columns'), {
-    items: [{
-        template: _view.get('_part/attr/string'),
-        params: {
-            attr: 'start'
-        }
-    },{
-        template: _view.get('_part/attr/string'),
-        params: {
-            attr: 'step'
-        }
-    }]
+<%- include(_view.get('_part/attr/string'), {
+    attr: 'start'
+}) %>
+
+<%- include(_view.get('_part/attr/string'), {
+    attr: 'step'
 }) %>
