--- a/view/template/_part/behavior-param/timestamp.ejs
+++ b/view/template/_part/behavior-param/timestamp.ejs
@@ -1,18 +1,23 @@
+<!-- _part/behavior-param/timestamp -->
 
-<%- include(_view.get('_part/group/columns'), {
-    items: [{
-        template: _view.get('_part/attr/select'),
-        params: {
-            attr: 'createdAttr',
-            items: attrItems,
-            update: _url('class-attr/update')
-        }
-    }, {
-        template: _view.get('_part/attr/select'),
-        params: {
-            attr: 'updatedAttr',
-            items: attrItems,
-            update: _url('class-attr/update')
-        }
-    }]
+<%- include(_view.get('_part/attr/select'), {
+    attr: 'createdAttr',
+    displayValue: model.getRelatedTitle('createdAttr'),
+    items: null,
+    select2: {
+        ajax: {url: _url('class-attr/list-select')},
+        queryData: {pid: owner.getId()}
+    },
+    update: _url('class-attr/update')
+}) %>
+
+<%- include(_view.get('_part/attr/select'), {
+    attr: 'updatedAttr',
+    displayValue: model.getRelatedTitle('updatedAttr'),
+    items: null,
+    select2: {
+        ajax: {url: _url('class-attr/list-select')},
+        queryData: {pid: owner.getId()}
+    },
+    update: _url('class-attr/update')
 }) %>
