--- a/view/template/_part/rule-param/number.ejs
+++ b/view/template/_part/rule-param/number.ejs
@@ -1,20 +1,15 @@
+<!-- _part/rule-param/number -->
 
 <%- include(_view.get('_part/attr/checkbox'), {
     attr: 'integerOnly'
 }) %>
 
-<%- include(_view.get('_part/group/columns'), {
-    items: [{
-        template: _view.get('_part/attr/string'),
-        params: {
-            attr: 'min'
-        }
-    }, {
-        template: _view.get('_part/attr/string'),
-        params: {
-            attr: 'max'
-        }
-    }]
+<%- include(_view.get('_part/attr/string'), {
+    attr: 'min'
+}) %>
+
+<%- include(_view.get('_part/attr/string'), {
+    attr: 'max'
 }) %>
 
 <%- include(_view.get('_part/attr/string'), {
