--- a/view/template/_part/rule-param/relationCounter.ejs
+++ b/view/template/_part/rule-param/relationCounter.ejs
@@ -1,16 +1,11 @@
+<!-- _part/rule-param/relationCounter -->
 
-<%- include(_view.get('_part/group/columns'), {
-    items: [{
-        template: _view.get('_part/attr/string'),
-        params: {
-            attr: 'min'
-        }
-    }, {
-        template: _view.get('_part/attr/string'),
-        params: {
-            attr: 'max'
-        }
-    }]
+<%- include(_view.get('_part/attr/string'), {
+    attr: 'min'
+}) %>
+
+<%- include(_view.get('_part/attr/string'), {
+    attr: 'max'
 }) %>
 
 <%- include(_view.get('_part/attr/string'), {
