--- a/view/template/class/_form.ejs
+++ b/view/template/class/_form.ejs
@@ -26,7 +26,7 @@
             template: _view.get('_part/attr/checkbox'),
             params: {
                 attr: 'abstract',
-                hint: 'Base class that cannot be instantiated directly'
+                hint: 'Abstract class cannot be instantiated'
             }
         }]
     }]
