--- a/view/template/_part/nav/meta.ejs
+++ b/view/template/_part/nav/meta.ejs
@@ -1,4 +1,4 @@
-<!-- studio/view/_part/nav/meta -->
+<!-- studio/_part/nav/meta -->
 <div class="navbar-tools pull-left">
     <div class="btn-group">
       <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
