--- a/view/template/_part/nav/sideMenu.ejs
+++ b/view/template/_part/nav/sideMenu.ejs
@@ -1,5 +1,4 @@
-<!-- studio/./_part/nav/sideMenu -->
-
+<!-- studio/_part/nav/sideMenu -->
 <ul class="sidebar-menu tree-menu" data-widget="true" data-jam="TreeMenu">
     <li class="menu-item">
         <a href="studio/class" class="menu-item-btn">
@@ -53,4 +52,13 @@
         </a>
     </li>
     <% } %>
+
+    <li class="separator hidden"></li>
+    <li class="menu-item hidden">
+        <a href="studio/diagram/classes" class="menu-item-btn">
+            <i class="menu-item-icon fas fa-project-diagram"></i>
+            <span data-t="">Class diagram</span>
+        </a>
+    </li>
+
 </ul>
